# Neuron-Network

./: .gitignore
Neuron Network/: Neuron Network.sln
Neuron Network/Neuron Network/: DataSet.cpp  DataSet.h  Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron Network.vcxproj  Neuron Network.vcxproj.filters  Neuron.cpp  Neuron.h  SpectralClassifier.cpp  SpectralClassifier.h  SpectralСlassifier.cpp  SpectralСlassifier.h  errou_teach.txt  errou_test.txt  main.cpp  moduleSVD.cpp  moduleSVD.h  perceptron.cpp  saveW.txt
Neuron Network/src/: CMakeLists.txt  Layer.cpp  Layer.h  Net.cpp  Neuron Network.vcxproj.filters  Neuron.cpp  Neuron.h  SpectralClassifier.h  main.cpp
